--- a/monitoring/cert-manager/cert-manager.yaml
+++ b/monitoring/cert-manager/cert-manager.yaml
@@ -1,4 +1,13 @@
 ---
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: HelmRepository
+metadata:
+  name: cert-manager
+  namespace: flux-system
+spec:
+  interval: 1m0s
+  url: https://charts.jetstack.io
+---
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
@@ -19,4 +28,5 @@ spec:
   interval: 1m0s
   releaseName: cert-manager
   targetNamespace: cert-manager
-  values: {}
+  values:
+    installCRDs: true
